Refactor transaction event actions and enhance logging
- Rename event actions for clarity: DELETED to TRANSACTION_DELETED, ADDED to TRANSACTION_ADDED, UPDATED to TRANSACTION_UPDATED
- Update logging level for relevant packages to DEBUG
- Refactor tests to use householdRepository instead of spaceRepository